rm builders text

--- a/tables/tableJPFBuilders.tex
+++ b/tables/tableJPFBuilders.tex
@@ -82,7 +82,7 @@ Class & Method & Scope &
 \hline
 
 \end{tabular}%
-\caption{Estados generados JPF utilizando el método driver con todos los métodos de la API vs. solo utilizando los métodos builders.}
+\caption{Estados generados JPF utilizando el método driver con todos los métodos de la API vs. solo utilizando los métodos generadores de objectos.}
 \label{tab:results-jpf1}
  \end{table}
 
