--- a/builders.tex
+++ b/builders.tex
@@ -1227,7 +1227,7 @@ mejor conjunto de generadores de objetos.
 
 Para implementar el algoritmo genético, utilizamos una biblioteca muy popular en Java llamada \emph{Jenetics}\footnote{\url{https://jenetics.io/}}, versión 5.2.0 \cacho{Esto en experimental?}. Esta biblioteca está diseñada específicamente para algoritmos evolutivos y nos proporcionó las herramientas necesarias para desarrollar nuestro enfoque genético.
 \emph{Jenetics} es una biblioteca robusta y versátil que ofrece una amplia gama de funcionalidades para la implementación de algoritmos genéticos. Nos permitió definir y manipular genes, cromosomas y poblaciones, así como utilizar operadores genéticos como selección, cruzamiento y mutación. Además, cuenta con un sólido conjunto de herramientas de optimización y técnicas de evolución que nos permitieron adaptar el algoritmo a nuestras necesidades específicas.
-Gracias a \emph{Jenetics}, pudimos implementar el algoritmo genético de manera eficiente y efectiva, lo que nos permitió explorar y encontrar subconjuntos óptimos de métodos \emph{builders} para las diferentes estructuras de datos en nuestro estudio. Además, \emph{Jenetics} es muy fácil de usar, con una documentación completa y una comunidad activa de usuarios que proporciona soporte y ayuda.
+Gracias a \emph{Jenetics}, pudimos implementar el algoritmo genético de manera eficiente y efectiva, lo que nos permitió explorar y encontrar subconjuntos óptimos de métodos generadores de objetos para las diferentes estructuras de datos en nuestro estudio. Además, \emph{Jenetics} es muy fácil de usar, con una documentación completa y una comunidad activa de usuarios que proporciona soporte y ayuda.
 Una característica relevante de \emph{Jenetics} es que permite realizar la evaluación de los individuos de la población en paralelo utilizando el \emph{ForkJoinPool.commonPool()}, lo que mejora notablemente el rendimiento en sistemas con múltiples núcleos. Esta paralelización se gestiona de forma transparente, sin necesidad de implementar hilos manualmente, y puede personalizarse en caso de requerirse un control más detallado del entorno de ejecución.
 \cacho{HASTA ACA}
 
@@ -1512,7 +1512,7 @@ un único método, seleccionado también de manera no determinística entre
 todos los disponibles.
 
 En el caso en que la persona usuaria no conozca el conjunto de
-\emph{builders} (y no desee realizar la difícil tarea de seleccionarlos
+métodos generadores (y no desee realizar la difícil tarea de seleccionarlos
 manualmente), la alternativa más segura para evitar descartar métodos
 relevantes es utilizar \emph{todos} los métodos disponibles en el módulo,
 como se muestra en el \textit{Algoritmo~2}. En el cuerpo del ciclo, a cada
@@ -1553,11 +1553,11 @@ iteración hay \(m\) posibles métodos para la siguiente, de modo que tras
     }
 \end{lstlisting}
 
-Si bien evitar este crecimiento exponencial no es posible en muchos casos, en este trabajo se propone utilizar sólo los builders detectados por el algoritmo
+Si bien evitar este crecimiento exponencial no es posible en muchos casos, en este trabajo se propone utilizar sólo los métodos generadores detectados por el algoritmo
 genético explicado anteriormente para construir drivers, para acelerar la verificación de propiedades en JPF y mejorar su escalabilidad en casos que ocurren
 típicamente en la práctica (como el caso de NodeCachingLinkedList presentado aquí). Como se muestra en la figura Figura~\ref{fig:NCLbuilders}, sólo 3 métodos conforman un conjunto
 suficiente y minimal para la construcción de drivers para NodeCachingLinkedList. Utilizando sólo esos métodos, obtenemos el driver del algoritmo \ref{driverNCLBuilders}, que
-genera exactamente los mismos objetos de NodeCachingLinkedList que el anterior (porque los builders son suficientes y minimales), y por lo tanto JPF explora
+genera exactamente los mismos objetos de NodeCachingLinkedList que el anterior (porque los métodos generadores son suficientes y minimales), y por lo tanto JPF explora
 las mismas ejecuciones de la propiedad con ambos drivers. Sin embargo, como
 se discute en la sección experimental (\ref{sec:experimentalJPF}) eliminar métodos innecesarios del driver produce ganancias sustanciales en tiempo y escalabilidad en el análisis de nuestra
 propiedad de ejemplo usando JPF.
